app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: phoenix-service
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
