app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phoenix-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: phoenix.ravindra.tech
    http:
      paths:
      - backend:
          service:
            name: phoenix-service
            port:
              number: 80
        path: /
        pathType: Prefix
